added a button to upload flight plans

--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -65,6 +65,9 @@
             <div class="col-md-5" id="table-wrapper">
                 <!--My Flights Table-->
                 <h3>My Flights</h3>
+                <!--to upload new flights-->
+                <input type="file" id="fileElem" style="display:none" accept=".json">
+                <button id="fileSelect" class="btn btn-warning">Upload a new flight</button>
                 <div id="table-scroll">
                     <table class="MyFlights">
                         <thead>
