added code to show the user when errors happen

--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -63,6 +63,8 @@
                 </table>
             </div>
             <div class="col-md-5" id="table-wrapper">
+                <p id="errors" class="bg-danger text-center mt-0 mb-0 rounded"
+                   style="display:none"></p>
                 <!--My Flights Table-->
                 <h3>My Flights</h3>
                 <!--to upload new flights-->
