update server errors. be able to insert files with the same name. change airplane to be at the middle of the flightplan

--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -54,7 +54,7 @@
                 <p id="errors" class="bg-danger text-center mt-0 mb-0 rounded"
                    style="display:none"></p>
                 <!--to upload new flights-->
-                <input type="file" id="fileElem" style="display:none" accept=".json">
+                <input type="file" id="fileElem" style="display:none" accept=".json" onclick="this.value=null">
                 <button id="fileSelect" class="btn btn-warning">Upload a new flight</button>
                 <!--My Flights Table-->
                 <h3>My Flights</h3>
